improve code with pattern matching and Stream.toList